Vision alignment fix

--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -227,7 +227,7 @@ due to bugs in gatsby. */
     left: 35%;
   }
   .card__cta {
-    top: 25%;
+    top: 15%;
   }
   .projects-arrow {
     left: 42.5% !important;
